--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "python simple-https-server.py",
+    "build": "webpack --mode production",
+    "watch": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,16 +15,21 @@
     "@types/lodash": "^4.14.119",
     "@types/query-string": "^6.1.1",
     "@types/react": "^16.7.13",
+    "@types/react-beautiful-dnd": "^7.1.2",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.10",
+    "@types/react-textarea-autosize": "^4.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
     "lodash": "^4.17.11",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
+    "react-beautiful-dnd": "^10.0.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
+    "react-textarea-autosize": "^7.1.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "ts-loader": "^5.3.1",
     "typescript": "^3.2.1",
     "webpack": "^4.27.1",
