--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.119",
     "@types/query-string": "^6.1.1",
+    "@types/rc-progress": "^2.2.0",
     "@types/react": "^16.7.13",
     "@types/react-beautiful-dnd": "^7.1.2",
     "@types/react-dom": "^16.0.11",
@@ -23,6 +24,7 @@
     "@types/redux-logger": "^3.0.6",
     "lodash": "^4.17.11",
     "query-string": "^6.2.0",
+    "rc-progress": "^2.2.6",
     "react": "^16.6.3",
     "react-beautiful-dnd": "^10.0.3",
     "react-dom": "^16.6.3",
