--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "python simple-https-server.py",
+    "serve": "python simple-https-server.py",
     "build": "webpack --mode production",
     "watch": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
