--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-textarea-autosize": "^4.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
+    "@types/uuid": "^3.4.4",
     "lodash": "^4.17.11",
     "query-string": "^6.2.0",
     "rc-progress": "^2.2.6",
@@ -34,6 +35,7 @@
     "redux-thunk": "^2.3.0",
     "ts-loader": "^5.3.1",
     "typescript": "^3.2.1",
+    "uuid": "^3.3.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
