--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-redux": "^6.0.0",
     "react-textarea-autosize": "^7.1.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.3.3",
     "sass": "^1.15.2",
     "typescript": "^3.2.2",
     "uuid": "^3.3.2"
