--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "redux-observable": "^1.0.0",
     "rxjs": "^6.3.3",
     "sass": "^1.15.2",
+    "tslint": "^5.12.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.2.2",
     "uuid": "^3.3.2"
   }
