--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "target": "es2015",
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noEmit": true
+        "noEmit": true,
+        "allowSyntheticDefaultImports": true
     }
 }
