--- a/package.json
+++ b/package.json
@@ -4,47 +4,71 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "clean": "rm -rf dist",
-    "lint": "tslint --project . --format verbose",
-    "start": "npm run serve",
-    "serve": "parcel src/index.html --https",
-    "build": "parcel build src/index.html",
-    "deploy": "npm run clean && npm run build && scp -r dist/* linode:/var/www/route-planner/"
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "parcel build -d client/public client/src/index.html",
+    "build:server": "tsc -p server",
+    "clean": "npm run clean:client && npm run clean:server",
+    "clean:client": "rm -rf client/public",
+    "clean:server": "rm -rf server/out",
+    "start": "npm run clean && npm run build && npm run serve",
+    "start:server": "npm run clean:server && npm run build:server && npm run serve",
+    "lint": "npm run lint:client && npm run lint:server",
+    "lint:client": "tslint --project client --format verbose",
+    "lint:server": "tslint --project server --format verbose",
+    "serve": "node server/out/server.js"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "@koa/cors": "^2.2.3",
     "@types/copy-text-to-clipboard": "^1.0.0",
-    "@types/lodash": "^4.14.119",
-    "@types/query-string": "^6.1.1",
-    "@types/rc-progress": "^2.2.0",
-    "@types/react": "^16.7.17",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/koa": "^2.0.48",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.0.40",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa__cors": "^2.2.3",
+    "@types/lodash": "^4.14.121",
+    "@types/node-fetch": "^2.1.6",
+    "@types/pem": "^1.9.5",
+    "@types/query-string": "^6.2.0",
+    "@types/rc-progress": "^2.2.1",
+    "@types/react": "^16.8.6",
     "@types/react-beautiful-dnd": "^7.1.2",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-redux": "^6.0.11",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^6.0.13",
     "@types/react-textarea-autosize": "^4.3.3",
     "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.6",
+    "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.4",
     "babel-polyfill": "^6.26.0",
     "copy-text-to-clipboard": "^1.0.4",
+    "jsonwebtoken": "^8.5.0",
+    "koa": "^2.7.0",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
-    "parcel": "^1.10.3",
+    "mapkit-token": "^1.0.2",
+    "node-fetch": "^2.3.0",
+    "node-tspsolver": "^1.0.1",
+    "parcel": "^1.11.0",
+    "pem": "^1.14.2",
     "postcss-modules": "^1.4.1",
     "query-string": "^6.2.0",
-    "rc-progress": "^2.2.6",
-    "react": "^16.6.3",
-    "react-beautiful-dnd": "^10.0.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
+    "rc-progress": "^2.3.0",
+    "react": "^16.8.3",
+    "react-beautiful-dnd": "^10.0.4",
+    "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
     "react-textarea-autosize": "^7.1.0",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
-    "rxjs": "^6.3.3",
-    "sass": "^1.15.2",
-    "tslint": "^5.12.0",
+    "rxjs": "^6.4.0",
+    "sass": "^1.17.2",
+    "tslint": "^5.13.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2",
+    "typescript": "^3.3.3333",
     "uuid": "^3.3.2"
   }
 }
