--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "parcel build -d client/public client/src/index.html",
     "build:server": "tsc -p server",
+    "watch": "parcel watch -d client/public client/src/index.html",
     "clean": "npm run clean:client && npm run clean:server",
     "clean:client": "rm -rf client/public",
     "clean:server": "rm -rf server/out",
@@ -24,6 +25,7 @@
     "@types/copy-text-to-clipboard": "^1.0.0",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "^4.2.2",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.40",
     "@types/koa-static": "^4.0.1",
@@ -40,11 +42,13 @@
     "@types/react-textarea-autosize": "^4.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
+    "@types/temp": "^0.8.33",
     "@types/uuid": "^3.4.4",
     "babel-polyfill": "^6.26.0",
     "copy-text-to-clipboard": "^1.0.4",
     "jsonwebtoken": "^8.5.0",
     "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
@@ -66,6 +70,7 @@
     "redux-observable": "^1.0.0",
     "rxjs": "^6.4.0",
     "sass": "^1.17.2",
+    "temp": "^0.9.0",
     "tslint": "^5.13.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3333",
