--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.4000",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.5.0"
   }
 }
