Use prettier for global code formatting

--- a/package.json
+++ b/package.json
@@ -1,84 +1,87 @@
 {
-  "name": "route-planner",
-  "version": "1.0.0",
-  "description": "Web app to plan routes with large numbers of waypoints",
-  "repository": "https://github.com/rizadh/route-planner",
-  "scripts": {
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "parcel build -d client/public client/src/index.html",
-    "build:server": "tsc -p server",
-    "watch:client": "parcel watch -d client/public client/src/index.html",
-    "watch:server": "tsc -w -p server",
-    "clean": "npm run clean:client && npm run clean:server",
-    "clean:client": "rm -rf client/public",
-    "clean:server": "rm -rf server/out",
-    "start": "npm run clean && npm run build && npm run serve",
-    "start:server": "npm run clean:server && npm run build:server && npm run serve",
-    "lint": "npm run lint:client && npm run lint:server",
-    "lint:client": "tslint --project client --format verbose",
-    "lint:server": "tslint --project server --format verbose",
-    "serve": "node server/out/server.js",
-    "serve:watch": "nodemon server/out/server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@koa/cors": "^3.0.0",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/koa": "^2.0.48",
-    "@types/koa-bodyparser": "^4.2.2",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.0.40",
-    "@types/koa-static": "^4.0.1",
-    "@types/koa__cors": "^2.2.3",
-    "@types/lodash": "^4.14.123",
-    "@types/node-fetch": "^2.3.2",
-    "@types/pem": "^1.9.5",
-    "@types/query-string": "^6.3.0",
-    "@types/rc-progress": "^2.2.1",
-    "@types/react": "^16.8.13",
-    "@types/react-beautiful-dnd": "^11.0.0",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.6",
-    "@types/react-textarea-autosize": "^4.3.4",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.7",
-    "@types/temp": "^0.8.33",
-    "@types/uuid": "^3.4.4",
-    "babel-polyfill": "^6.26.0",
-    "copy-text-to-clipboard": "^2.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "lodash": "^4.17.11",
-    "mapkit-token": "^1.0.2",
-    "node-fetch": "^2.3.0",
-    "node-tspsolver": "^1.0.1",
-    "parcel": "^1.12.3",
-    "pem": "^1.14.2",
-    "postcss-modules": "^1.4.1",
-    "query-string": "^6.4.2",
-    "rc-progress": "^2.3.0",
-    "react": "^16.8.6",
-    "react-beautiful-dnd": "^11.0.0",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
-    "react-textarea-autosize": "^7.1.0",
-    "redux-logger": "^3.0.6",
-    "redux-observable": "^1.1.0",
-    "rxjs": "^6.4.0",
-    "sass": "^1.18.0",
-    "temp": "^0.9.0",
-    "tslint": "^5.16.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.4.3",
-    "uuid": "^3.3.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.5.1",
-    "nodemon": "^1.18.11"
-  }
+    "name": "route-planner",
+    "version": "1.0.0",
+    "description": "Web app to plan routes with large numbers of waypoints",
+    "repository": "https://github.com/rizadh/route-planner",
+    "scripts": {
+        "build": "npm run build:client && npm run build:server",
+        "build:client": "parcel build -d client/public client/src/index.html",
+        "build:server": "tsc -p server",
+        "watch:client": "parcel watch -d client/public client/src/index.html",
+        "watch:server": "tsc -w -p server",
+        "clean": "npm run clean:client && npm run clean:server",
+        "clean:client": "rm -rf client/public",
+        "clean:server": "rm -rf server/out",
+        "start": "npm run clean && npm run build && npm run serve",
+        "start:server": "npm run clean:server && npm run build:server && npm run serve",
+        "lint": "npm run lint:client && npm run lint:server",
+        "lint:client": "tslint --project client --format verbose -c tslint.json",
+        "lint:server": "tslint --project server --format verbose -c tslint.json",
+        "serve": "node server/out/server.js",
+        "serve:watch": "nodemon server/out/server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@koa/cors": "^3.0.0",
+        "@types/jsonwebtoken": "^8.3.2",
+        "@types/koa": "^2.0.48",
+        "@types/koa-bodyparser": "^4.2.2",
+        "@types/koa-logger": "^3.1.1",
+        "@types/koa-router": "^7.0.40",
+        "@types/koa-static": "^4.0.1",
+        "@types/koa__cors": "^2.2.3",
+        "@types/lodash": "^4.14.123",
+        "@types/node-fetch": "^2.3.2",
+        "@types/pem": "^1.9.5",
+        "@types/query-string": "^6.3.0",
+        "@types/rc-progress": "^2.2.1",
+        "@types/react": "^16.8.13",
+        "@types/react-beautiful-dnd": "^11.0.0",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-redux": "^7.0.6",
+        "@types/react-textarea-autosize": "^4.3.4",
+        "@types/redux": "^3.6.0",
+        "@types/redux-logger": "^3.0.7",
+        "@types/temp": "^0.8.33",
+        "@types/uuid": "^3.4.4",
+        "babel-polyfill": "^6.26.0",
+        "copy-text-to-clipboard": "^2.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "koa": "^2.7.0",
+        "koa-bodyparser": "^4.2.1",
+        "koa-logger": "^3.2.0",
+        "koa-router": "^7.4.0",
+        "koa-static": "^5.0.0",
+        "lodash": "^4.17.11",
+        "mapkit-token": "^1.0.2",
+        "node-fetch": "^2.3.0",
+        "node-tspsolver": "^1.0.1",
+        "parcel": "^1.12.3",
+        "pem": "^1.14.2",
+        "postcss-modules": "^1.4.1",
+        "query-string": "^6.4.2",
+        "rc-progress": "^2.3.0",
+        "react": "^16.8.6",
+        "react-beautiful-dnd": "^11.0.0",
+        "react-dom": "^16.8.6",
+        "react-redux": "^7.0.2",
+        "react-textarea-autosize": "^7.1.0",
+        "redux-logger": "^3.0.6",
+        "redux-observable": "^1.1.0",
+        "rxjs": "^6.4.0",
+        "sass": "^1.18.0",
+        "temp": "^0.9.0",
+        "tslint": "^5.16.0",
+        "tslint-react": "^4.0.0",
+        "uuid": "^3.3.2"
+    },
+    "devDependencies": {
+        "autoprefixer": "^9.5.1",
+        "nodemon": "^1.18.11",
+        "prettier": "^1.17.0",
+        "prettier-tslint": "^0.4.2",
+        "tslint-react-hooks": "^2.0.0",
+        "typescript": "^3.4.3"
+    }
 }
