--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "babel-polyfill": "^6.26.0",
         "copy-text-to-clipboard": "^2.1.0",
         "escape-latex": "^1.2.0",
+        "geolib": "^2.0.24",
         "immer": "^3.1.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.7.0",
