--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "outDir": "out",
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "module": "commonjs",
         "target": "es2015",
         "strict": true,
