--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,12 @@
     "description": "Web app to plan routes with large numbers of waypoints",
     "repository": "https://github.com/rizadh/route-planner",
     "scripts": {
-        "build": "npm run build:client && npm run build:server",
-        "build:client": "parcel build -d client/public --public-url . client/src/index.html",
-        "build:server": "tsc -p server",
-        "watch:client": "parcel watch -d client/public --public-url . client/src/index.html",
-        "watch:server": "tsc -w -p server",
-        "clean": "npm run clean:client && npm run clean:server",
-        "clean:client": "rm -rf client/public",
-        "clean:server": "rm -rf server/out",
-        "start": "npm run clean && npm run build && npm run serve",
-        "start:server": "npm run clean:server && npm run build:server && npm run serve",
-        "lint": "npm run lint:client && npm run lint:server",
-        "lint:client": "tsc -p client -noEmit && tslint --project client --format verbose -c tslint.json",
-        "lint:server": "tsc -p server -noEmit && tslint --project server --format verbose -c tslint.json",
-        "serve": "node server/out/server.js",
-        "serve:watch": "nodemon server/out/server.js"
+        "clean": "rm -rf out",
+        "lint": "tsc -p . -noEmit && tslint --project . --format verbose -c tslint.json",
+        "build": "tsc -p .",
+        "build:watch": "tsc -w -p .",
+        "start": "node out/server.js",
+        "start:watch": "nodemon out/server.js"
     },
     "author": "",
     "license": "ISC",
