Update server NPM packages

--- a/server/package.json
+++ b/server/package.json
@@ -18,30 +18,16 @@
         "@types/escape-latex": "^0.1.30",
         "@types/jsonwebtoken": "^8.3.2",
         "@types/koa": "^2.0.48",
-        "@types/koa-bodyparser": "^4.2.2",
+        "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-logger": "^3.1.1",
-        "@types/koa-router": "^7.0.40",
+        "@types/koa-router": "^7.0.41",
         "@types/koa-static": "^4.0.1",
         "@types/koa__cors": "^2.2.3",
-        "@types/lodash": "^4.14.123",
-        "@types/node-fetch": "^2.3.3",
+        "@types/lodash": "^4.14.134",
+        "@types/node-fetch": "^2.3.7",
         "@types/pem": "^1.9.5",
-        "@types/query-string": "^6.3.0",
-        "@types/rc-progress": "^2.2.1",
-        "@types/react": "^16.8.15",
-        "@types/react-beautiful-dnd": "^11.0.1",
-        "@types/react-dom": "^16.8.4",
-        "@types/react-redux": "^7.0.8",
-        "@types/react-textarea-autosize": "^4.3.4",
-        "@types/redux": "^3.6.0",
-        "@types/redux-logger": "^3.0.7",
         "@types/temp": "^0.8.34",
-        "@types/uuid": "^3.4.4",
-        "babel-polyfill": "^6.26.0",
-        "copy-text-to-clipboard": "^2.1.0",
         "escape-latex": "^1.2.0",
-        "geolib": "^2.0.24",
-        "immer": "^3.1.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
@@ -50,32 +36,20 @@
         "koa-static": "^5.0.0",
         "lodash": "^4.17.11",
         "mapkit-token": "^1.0.2",
-        "node-fetch": "^2.4.1",
+        "node-fetch": "^2.6.0",
         "node-tspsolver": "^1.0.1",
         "parcel": "^1.12.3",
         "pem": "^1.14.2",
         "postcss-modules": "^1.4.1",
-        "query-string": "^6.5.0",
-        "rc-progress": "^2.3.0",
-        "react": "^16.8.6",
-        "react-beautiful-dnd": "^11.0.2",
-        "react-dom": "^16.8.6",
-        "react-textarea-autosize": "^7.1.0",
-        "redux-logger": "^3.0.6",
-        "redux-observable": "^1.1.0",
-        "rxjs": "^6.5.1",
-        "sass": "^1.19.0",
-        "temp": "^0.9.0",
-        "tslint": "^5.16.0",
-        "tslint-react": "^4.0.0",
-        "uuid": "^3.3.2"
+        "temp": "^0.9.0"
     },
     "devDependencies": {
-        "autoprefixer": "^9.5.1",
-        "nodemon": "^1.18.11",
-        "prettier": "^1.17.0",
+        "tslint": "^5.17.0",
+        "autoprefixer": "^9.6.0",
+        "nodemon": "^1.19.1",
+        "prettier": "^1.18.2",
         "prettier-tslint": "^0.4.2",
-        "tslint-react-hooks": "^2.1.0",
-        "typescript": "^3.4.5"
+        "tslint-react-hooks": "^2.1.1",
+        "typescript": "^3.5.2"
     }
 }
