--- a/server/package.json
+++ b/server/package.json
@@ -17,41 +17,42 @@
     "dependencies": {
         "@koa/cors": "^3.0.0",
         "@types/escape-latex": "^0.1.30",
-        "@types/jsonwebtoken": "^8.3.2",
-        "@types/koa": "^2.0.48",
+        "@types/jsonwebtoken": "^8.3.5",
+        "@types/koa": "^2.11.0",
         "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-logger": "^3.1.1",
-        "@types/koa-router": "^7.0.41",
+        "@types/koa-router": "^7.0.42",
         "@types/koa-static": "^4.0.1",
         "@types/koa__cors": "^2.2.3",
-        "@types/lodash": "^4.14.134",
-        "@types/node-fetch": "^2.3.7",
+        "@types/lodash": "^4.14.149",
+        "@types/node-fetch": "^2.5.4",
         "@types/pem": "^1.9.5",
         "@types/temp": "^0.8.34",
         "escape-latex": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
-        "koa": "^2.7.0",
+        "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
-        "koa-logger": "^3.2.0",
+        "koa-logger": "^3.2.1",
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.15",
         "mapkit-token": "^1.0.2",
         "node-fetch": "^2.6.0",
-        "node-tspsolver": "^1.0.1",
-        "parcel": "^1.12.3",
-        "pem": "^1.14.2",
+        "node-tspsolver": "^1.0.2",
+        "parcel": "^1.12.4",
+        "pem": "^1.14.3",
         "postcss-modules": "^1.4.1",
-        "temp": "^0.9.0"
+        "temp": "^0.9.1"
     },
     "devDependencies": {
-        "autoprefixer": "^9.6.0",
-        "nodemon": "^1.19.1",
-        "onchange": "^6.0.0",
-        "prettier": "^1.18.2",
+        "@types/node": "^12.12.14",
+        "autoprefixer": "^9.7.3",
+        "nodemon": "^1.19.4",
+        "onchange": "^6.1.0",
+        "prettier": "^1.19.1",
         "prettier-tslint": "^0.4.2",
-        "tslint": "^5.17.0",
-        "tslint-react-hooks": "^2.1.1",
-        "typescript": "^3.5.2"
+        "tslint": "^5.20.1",
+        "tslint-react-hooks": "^2.2.1",
+        "typescript": "^3.7.3"
     }
 }
