--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@mapbox/mapbox-sdk": "^0.9.0",
         "@types/lodash": "^4.14.134",
+        "@types/mapbox__mapbox-sdk": "^0.6.2",
         "@types/query-string": "^6.3.0",
         "@types/rc-progress": "^2.2.1",
         "@types/react": "^16.8.20",
