--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "@mapbox/mapbox-sdk": "^0.9.0",
+        "@types/apple-mapkit-js": "^5.18.0",
         "@types/lodash": "^4.14.134",
         "@types/mapbox__mapbox-sdk": "^0.6.2",
         "@types/query-string": "^6.3.0",
