--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
         "copy-text-to-clipboard": "^2.1.0",
         "geolib": "^3.0.3",
         "immer": "^5.0.1",
+        "ismobilejs": "^1.0.3",
         "lodash": "^4.17.15",
         "query-string": "^6.7.0",
         "rc-progress": "^2.3.0",
