--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "@koa/cors": "^3.0.0",
+        "@mapbox/mapbox-sdk": "^0.9.0",
         "@types/escape-latex": "^0.1.30",
         "@types/jsonwebtoken": "^8.3.5",
         "@types/koa": "^2.11.0",
@@ -25,6 +26,7 @@
         "@types/koa-static": "^4.0.1",
         "@types/koa__cors": "^2.2.3",
         "@types/lodash": "^4.14.149",
+        "@types/mapbox__mapbox-sdk": "^0.6.2",
         "@types/node-fetch": "^2.5.4",
         "@types/pem": "^1.9.5",
         "@types/temp": "^0.8.34",
