--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
         "build": "tsc -p .",
         "build:watch": "tsc -w -p .",
         "start": "node out/server.js",
-        "start:watch": "nodemon out/server.js"
+        "start:watch": "dotenv nodemon out/server.js"
     },
     "author": "",
     "license": "ISC",
@@ -48,6 +48,7 @@
     "devDependencies": {
         "@types/node": "^12.12.21",
         "autoprefixer": "^9.7.3",
+        "dotenv-cli": "^3.1.0",
         "nodemon": "^1.19.4",
         "onchange": "^6.1.0",
         "prettier": "^1.19.1",
