Rename NPM package

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "route-planner",
+    "name": "QuickRoute",
     "version": "1.0.0",
     "description": "Web app to plan routes with large numbers of waypoints",
     "repository": "https://github.com/rizadh/route-planner",
