--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@mapbox/mapbox-sdk": "^0.9.0",
         "@types/apple-mapkit-js": "^5.18.0",
+        "@types/file-saver": "^2.0.1",
         "@types/lodash": "^4.14.134",
         "@types/mapbox__mapbox-sdk": "^0.6.2",
         "@types/query-string": "^6.3.0",
@@ -29,6 +30,7 @@
         "@types/uuid": "^3.4.4",
         "babel-polyfill": "^6.26.0",
         "copy-text-to-clipboard": "^2.1.0",
+        "file-saver": "^2.0.2",
         "geolib": "^3.0.3",
         "immer": "^5.0.1",
         "ismobilejs": "^1.0.3",
