--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "description": "Web app to plan routes with large numbers of waypoints",
     "repository": "https://github.com/rizadh/route-planner",
     "scripts": {
-        "lint": "tsc -p . -noEmit && tslint --project . --format verbose -c tslint.json",
+        "lint": "tsc -p . -noEmit; tslint --project . --format verbose -c tslint.json",
         "clean": "rm -rf public",
         "build": "parcel build --out-dir public --public-url . src/index.html",
         "serve": "parcel --out-dir public --https --port 8080 --hmr-port 8081 src/index.html"
