--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "lint": "tsc -p . -noEmit && tslint --project . --format verbose -c tslint.json",
         "clean": "rm -rf public",
-        "build": "parcel build --out-dir public --public-url . src/index.html",
+        "build": "parcel build --out-dir public --no-source-maps src/index.html",
         "serve": "parcel --out-dir public --https src/index.html",
         "test": "jest"
     },
