--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     },
     "devDependencies": {
         "@types/jest": "^24.0.24",
+        "@types/redux-logger": "^3.0.7",
         "autoprefixer": "^9.6.0",
         "jest": "^24.9.0",
         "parcel": "^1.12.4",
         "prettier": "^1.18.2",
         "prettier-tslint": "^0.4.2",
+        "redux-logger": "^3.0.6",
         "sass": "^1.24.0",
         "ts-jest": "^24.2.0",
         "tslint": "^5.17.0",
