--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^16.9.17",
         "@types/react-beautiful-dnd": "^11.0.4",
         "@types/react-dom": "^16.8.4",
+        "@types/react-redux": "^7.1.5",
         "@types/react-textarea-autosize": "^4.3.4",
         "@types/redux": "^3.6.0",
         "@types/uuid": "^3.4.4",
@@ -36,6 +37,7 @@
         "react": "^16.8.6",
         "react-beautiful-dnd": "^12.2.0",
         "react-dom": "^16.8.6",
+        "react-redux": "^7.1.3",
         "react-textarea-autosize": "^7.1.0",
         "redux-observable": "^1.1.0",
         "rxjs": "^6.5.2",
