--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@hot-loader/react-dom": "^16.11.0",
         "@reduxjs/toolkit": "^1.2.1",
         "@types/apple-mapkit-js": "^5.18.0",
         "@types/file-saver": "^2.0.1",
@@ -41,6 +42,7 @@
         "react": "^16.8.6",
         "react-beautiful-dnd": "^12.2.0",
         "react-dom": "^16.8.6",
+        "react-hot-loader": "^4.12.18",
         "react-redux": "^7.1.3",
         "react-textarea-autosize": "^7.1.0",
         "redux-observable": "^1.1.0",
@@ -62,5 +64,8 @@
         "tslint-react": "^4.0.0",
         "tslint-react-hooks": "^2.1.1",
         "typescript": "^3.7.4"
+    },
+    "alias": {
+        "react-dom": "@hot-loader/react-dom"
     }
 }
