--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
         "@reduxjs/toolkit": "^1.2.1",
         "@types/apple-mapkit-js": "^5.18.0",
         "@types/file-saver": "^2.0.1",
-        "@types/lodash": "^4.14.134",
-        "@types/query-string": "^6.3.0",
-        "@types/rc-progress": "^2.2.1",
+        "@types/lodash": "^4.14.149",
         "@types/react": "^16.9.17",
         "@types/react-beautiful-dnd": "^11.0.4",
         "@types/react-dom": "^16.8.4",
         "@types/react-redux": "^7.1.5",
         "@types/react-textarea-autosize": "^4.3.4",
-        "@types/redux": "^3.6.0",
         "@types/uuid": "^3.4.4",
         "babel-polyfill": "^6.26.0",
         "copy-text-to-clipboard": "^2.1.0",
@@ -45,6 +42,7 @@
         "react-hot-loader": "^4.12.18",
         "react-redux": "^7.1.3",
         "react-textarea-autosize": "^7.1.0",
+        "redux": "^4.0.5",
         "redux-observable": "^1.1.0",
         "rxjs": "^6.5.4",
         "uuid": "^3.3.2"
