--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react-dom": "^16.8.4",
         "@types/react-redux": "^7.1.5",
         "@types/react-textarea-autosize": "^4.3.4",
+        "@types/styled-components": "^4.4.2",
         "@types/uuid": "^3.4.4",
         "babel-polyfill": "^6.26.0",
         "copy-text-to-clipboard": "^2.1.0",
@@ -40,11 +41,13 @@
         "react-beautiful-dnd": "^12.2.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.18",
+        "react-is": "^16.12.0",
         "react-redux": "^7.1.3",
         "react-textarea-autosize": "^7.1.0",
         "redux": "^4.0.5",
         "redux-observable": "^1.1.0",
         "rxjs": "^6.5.4",
+        "styled-components": "^5.0.0",
         "uuid": "^3.3.2"
     },
     "devDependencies": {
