--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "build:parcel": "parcel build --out-dir public --no-source-maps src/index.html",
         "serve": "npm run clean && npm run serve:parcel",
         "serve:parcel": "parcel --out-dir public --https src/index.html",
-        "test": "jest"
+        "test": "jest",
+        "generate": "graphql-codegen --config codegen.yml"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@apollo/react-hooks": "^3.1.3",
         "@hot-loader/react-dom": "^16.11.0",
         "@reduxjs/toolkit": "^1.2.1",
         "@types/apple-mapkit-js": "^5.18.0",
@@ -29,9 +31,12 @@
         "@types/react-textarea-autosize": "^4.3.4",
         "@types/styled-components": "^4.4.2",
         "@types/uuid": "^3.4.4",
+        "apollo-boost": "^0.4.7",
+        "b64-to-blob": "^1.2.19",
         "babel-polyfill": "^6.26.0",
         "copy-text-to-clipboard": "^2.1.0",
         "file-saver": "^2.0.2",
+        "graphql": "^14.6.0",
         "immer": "^5.2.1",
         "ismobilejs": "^1.0.3",
         "lodash": "^4.17.15",
@@ -50,6 +55,9 @@
         "uuid": "^3.3.2"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^1.12.2",
+        "@graphql-codegen/typescript": "1.12.2",
+        "@graphql-codegen/typescript-operations": "1.12.2",
         "@types/jest": "^24.0.25",
         "@types/redux-logger": "^3.0.7",
         "autoprefixer": "^9.6.0",
