Cleanup NPM scripts

--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
     "description": "Web app to plan routes with large numbers of waypoints",
     "repository": "https://github.com/rizadh/route-planner",
     "scripts": {
-        "lint": "npm run lint:tsc && npm run lint:tslint",
+        "lint": "concurrently -n tsc,tslint \"yarn lint:tsc\" \"yarn lint:tslint\"",
         "lint:tsc": "tsc -p . -noEmit",
         "lint:tslint": "tslint --project . --format verbose -c tslint.json",
         "clean": "rm -rf public",
-        "build": "npm run clean && npm run build:parcel",
-        "build:parcel": "parcel build --out-dir public --no-source-maps src/index.html",
-        "serve": "npm run clean && npm run serve:parcel",
-        "serve:parcel": "parcel --out-dir public --https src/index.html",
+        "build": "parcel build --out-dir public --no-source-maps src/index.html",
+        "develop": "parcel --out-dir public --https src/index.html",
         "test": "jest",
         "generate": "graphql-codegen --config codegen.yml"
     },
@@ -61,6 +59,7 @@
         "@types/jest": "^24.0.25",
         "@types/redux-logger": "^3.0.7",
         "autoprefixer": "^9.6.0",
+        "concurrently": "^5.1.0",
         "jest": "^24.9.0",
         "parcel": "^1.12.4",
         "prettier": "^1.18.2",
