--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react-dom": "^16.8.4",
         "@types/react-redux": "^7.1.5",
         "@types/react-textarea-autosize": "^4.3.4",
+        "@types/react-transition-group": "^4.2.3",
         "@types/styled-components": "^4.4.2",
         "@types/uuid": "^3.4.4",
         "apollo-boost": "^0.4.7",
@@ -46,6 +47,7 @@
         "react-is": "^16.12.0",
         "react-redux": "^7.1.3",
         "react-textarea-autosize": "^7.1.0",
+        "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
         "redux-observable": "^1.1.0",
         "rxjs": "^6.5.4",
