--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/react-redux": "^7.1.5",
         "@types/react-textarea-autosize": "^4.3.4",
         "@types/react-transition-group": "^4.2.3",
+        "@types/resize-observer-browser": "^0.1.3",
         "@types/styled-components": "^4.4.2",
         "@types/uuid": "^3.4.4",
         "apollo-boost": "^0.4.7",
