--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react-hot-loader": "^4.12.18",
         "react-is": "^16.12.0",
         "react-redux": "^7.1.3",
+        "react-spring": "^8.0.27",
         "react-textarea-autosize": "^7.1.0",
         "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
