Switch to quicker optimization strategy

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@reduxjs/toolkit": "^1.2.1",
         "@types/apple-mapkit-js": "^5.18.0",
         "@types/file-saver": "^2.0.1",
+        "@types/haversine": "^1.1.4",
         "@types/lodash": "^4.14.149",
         "@types/react": "^16.9.17",
         "@types/react-beautiful-dnd": "^12.1.2",
@@ -37,6 +38,7 @@
         "copy-text-to-clipboard": "^2.1.0",
         "file-saver": "^2.0.2",
         "graphql": "^14.6.0",
+        "haversine": "^1.1.1",
         "immer": "^6.0.2",
         "ismobilejs": "^1.0.3",
         "lodash": "^4.17.15",
