--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Web app to plan routes with large numbers of waypoints",
     "repository": "https://github.com/rizadh/route-planner",
     "scripts": {
-        "lint": "concurrently -n tsc,tslint \"yarn lint:tsc\" \"yarn lint:tslint\"",
+        "lint": "concurrently -n tsc,eslint \"yarn lint:tsc\" \"yarn lint:eslint\"",
         "lint:tsc": "tsc -p . -noEmit",
-        "lint:tslint": "tslint --project . --format verbose -c tslint.json",
+        "lint:eslint": "eslint ./src",
         "clean": "rm -rf public",
         "build": "parcel build --out-dir public --no-source-maps src/index.html",
         "develop": "parcel --out-dir public --https src/index.html",
@@ -64,18 +64,18 @@
         "@graphql-codegen/typescript-operations": "1.13.1",
         "@types/jest": "^25.1.4",
         "@types/redux-logger": "^3.0.7",
+        "@typescript-eslint/eslint-plugin": "^3.2.0",
+        "@typescript-eslint/parser": "^3.2.0",
         "autoprefixer": "^9.6.0",
         "concurrently": "^5.1.0",
+        "eslint": "^7.2.0",
+        "eslint-plugin-react": "^7.20.0",
         "jest": "^25.1.0",
         "parcel": "^1.12.4",
         "prettier": "^1.18.2",
-        "prettier-tslint": "^0.4.2",
         "redux-logger": "^3.0.6",
         "sass": "^1.24.4",
         "ts-jest": "^25.2.1",
-        "tslint": "^6.1.0",
-        "tslint-react": "^4.0.0",
-        "tslint-react-hooks": "^2.1.1",
         "typescript": "^3.7.4"
     },
     "alias": {
