--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,6 +16,5 @@ plugins:
     - react
     - "@typescript-eslint"
 rules:
-    "@typescript-eslint/explicit-function-return-type":
-        - 1
-        - allowTypedFunctionExpressions: true
+    "@typescript-eslint/explicit-function-return-type": 0
+    "@typescript-eslint/explicit-module-boundary-types": 0
