--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,6 @@ plugins:
 rules:
     "@typescript-eslint/explicit-function-return-type": 0
     "@typescript-eslint/explicit-module-boundary-types": 0
+settings:
+    react: 
+        version: "detect"
