--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,7 @@ extends:
     - "plugin:react/recommended"
     - "plugin:@typescript-eslint/eslint-recommended"
     - "plugin:@typescript-eslint/recommended"
+    - "plugin:react-hooks/recommended"
 parser: "@typescript-eslint/parser"
 parserOptions:
     ecmaFeatures:
