--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "concurrently": "^5.1.0",
         "eslint": "^7.2.0",
         "eslint-plugin-react": "^7.20.0",
+        "eslint-plugin-react-hooks": "^4.0.4",
         "jest": "^25.1.0",
         "parcel": "^1.12.4",
         "prettier": "^1.18.2",
