--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -19,6 +19,7 @@ plugins:
 rules:
     "@typescript-eslint/explicit-function-return-type": 0
     "@typescript-eslint/explicit-module-boundary-types": 0
+    "react-hooks/exhaustive-deps": 0
 settings:
     react: 
         version: "detect"
