--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 node_js: node
 env:
     - NPM_SCRIPT=lint
+    - NPM_SCRIPT=format:check
     - NPM_SCRIPT=test
     - NPM_SCRIPT=build
 script: yarn autoclean --force && yarn $NPM_SCRIPT
