--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "lint": "eslint src",
         "lint:fix": "eslint --fix src",
+        "format": "prettier --write 'src/**/*.{ts,tsx}'",
+        "format:check": "prettier --check 'src/**/*.{ts,tsx}'",
         "clean": "rm -rf public",
         "build": "parcel build --out-dir public --no-source-maps src/index.html",
         "develop": "parcel --out-dir public --https src/index.html",
