--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,7 @@ extends:
     - "plugin:@typescript-eslint/eslint-recommended"
     - "plugin:@typescript-eslint/recommended"
     - "plugin:react-hooks/recommended"
+    - "plugin:prettier/recommended"
 parser: "@typescript-eslint/parser"
 parserOptions:
     ecmaFeatures:
