--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "scripts": {
         "lint": "eslint src",
         "lint:fix": "eslint --fix src",
-        "format": "prettier --write 'src/**/*.{ts,tsx}'",
-        "format:check": "prettier --check 'src/**/*.{ts,tsx}'",
         "clean": "rm -rf public",
         "build": "parcel build --out-dir public --no-source-maps src/index.html",
         "develop": "parcel --out-dir public --https src/index.html",
@@ -70,6 +68,8 @@
         "autoprefixer": "^9.6.0",
         "concurrently": "^5.1.0",
         "eslint": "^7.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.4",
         "jest": "^25.1.0",
