--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "avoid"
 }
