--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "immer": "^7.0.1",
         "ismobilejs": "^1.0.3",
         "lodash": "^4.17.15",
+        "pdf-lib": "^1.11.2",
         "query-string": "^6.7.0",
         "react": "^16.8.6",
         "react-beautiful-dnd": "^13.0.0",
