--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,13 +2,13 @@ env:
     browser: true
     es2020: true
 extends:
-    - "eslint:recommended"
-    - "plugin:react/recommended"
-    - "plugin:@typescript-eslint/eslint-recommended"
-    - "plugin:@typescript-eslint/recommended"
-    - "plugin:react-hooks/recommended"
-    - "plugin:prettier/recommended"
-parser: "@typescript-eslint/parser"
+    - 'eslint:recommended'
+    - 'plugin:react/recommended'
+    - 'plugin:@typescript-eslint/eslint-recommended'
+    - 'plugin:@typescript-eslint/recommended'
+    - 'plugin:react-hooks/recommended'
+    - 'plugin:prettier/recommended'
+parser: '@typescript-eslint/parser'
 parserOptions:
     ecmaFeatures:
         jsx: true
@@ -16,11 +16,11 @@ parserOptions:
     sourceType: module
 plugins:
     - react
-    - "@typescript-eslint"
+    - '@typescript-eslint'
 rules:
-    "@typescript-eslint/explicit-function-return-type": 0
-    "@typescript-eslint/explicit-module-boundary-types": 0
-    "react-hooks/exhaustive-deps": 0
+    '@typescript-eslint/explicit-function-return-type': 0
+    '@typescript-eslint/explicit-module-boundary-types': 0
+    'react-hooks/exhaustive-deps': 0
 settings:
-    react: 
-        version: "detect"
+    react:
+        version: 'detect'
