Include TypeScript compilation in CI build step

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint:fix": "prettier -w . && eslint src --cache --fix",
         "clean": "rm -rf public",
         "build": "parcel build --out-dir public --no-source-maps src/index.html",
+        "build:ci": "tsc -noEmit -p . && yarn build",
         "develop": "parcel --out-dir public --https src/index.html",
         "test": "jest",
         "generate": "graphql-codegen --config codegen.yml"
