--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ node_js: node
 env:
     - NPM_SCRIPT=lint:strict
     - NPM_SCRIPT=test
-    - NPM_SCRIPT=build
+    - NPM_SCRIPT=build:ci
 script: yarn autoclean --force && yarn $NPM_SCRIPT
