--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ os: linux
 language: node_js
 node_js: node
 env:
-    - NPM_SCRIPT=lint:strict
+    - NPM_SCRIPT=lint
     - NPM_SCRIPT=test
-    - NPM_SCRIPT=build:ci
+    - NPM_SCRIPT=build
+    - NPM_SCRIPT=build:tsc
 script: yarn autoclean --force && yarn $NPM_SCRIPT
