--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint:fix": "prettier -w . && eslint src --cache --fix",
         "clean": "rm -rf public",
         "build": "parcel build --out-dir public --no-source-maps src/index.html",
-        "build:ci": "tsc -noEmit -p . && yarn build",
+        "build:tsc": "tsc -noEmit -p .",
         "develop": "parcel --out-dir out --https src/index.html",
         "test": "jest",
         "generate": "graphql-codegen --config codegen.yml"
