--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "route-planner",
     "version": "1.0.0",
+    "author": "Rizadh Nizam",
     "description": "Web app to plan routes with large numbers of waypoints",
+    "license": "MIT",
     "repository": "https://github.com/rizadh/route-planner",
     "scripts": {
         "lint": "prettier -c . && eslint src --max-warnings 0 --cache",
@@ -13,8 +15,6 @@
         "test": "jest",
         "generate": "graphql-codegen --config codegen.yml"
     },
-    "author": "",
-    "license": "ISC",
     "dependencies": {
         "@apollo/react-hooks": "^4.0.0",
         "@hot-loader/react-dom": "^17.0.0-rc.2",
