--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 os: linux
 language: node_js
 node_js: 14
+cache: yarn
 env:
     - NPM_SCRIPT=lint
     - NPM_SCRIPT=test
     - NPM_SCRIPT=build
     - NPM_SCRIPT=build:tsc
-script: yarn autoclean --force && yarn $NPM_SCRIPT
+script: yarn $NPM_SCRIPT
